--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         .reveal { opacity: 0; transform: translateY(30px); }
         ::selection { background: rgba(0, 102, 255, 0.4); color: white; }
     </style>
-    <link rel="icon" type="image/x-icon" href="../ukkorucode/images/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="ukkorucode/images//favicon-32x32.png">
 </head>
 <body>
     <nav id="navbar" class="fixed top-0 left-0 right-0 z-50 transition-all duration-500 nav-hidden">
@@ -170,7 +170,7 @@
                         <div class="absolute -top-4 -left-4 w-24 h-24 border-l-2 border-t-2 border-brand-cyan/50"></div>
                         <div class="absolute -bottom-4 -right-4 w-24 h-24 border-r-2 border-b-2 border-brand-purple/50"></div>
                         <div class="relative rounded-2xl overflow-hidden img-zoom">
-                            <img src="images/about-team.jpg" alt="Equipo UkkoruCode" class="w-full h-auto">
+                            <img src="ukkorucode/images/about-team.jpg" alt="Equipo UkkoruCode" class="w-full h-auto">
                             <div class="absolute inset-0 bg-gradient-to-tr from-brand-dark/40 via-transparent to-brand-cyan/10"></div>
                         </div>
                     </div>
@@ -384,7 +384,7 @@
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
                 <div class="reveal glass rounded-2xl overflow-hidden card-hover group">
-                    <div class="relative img-zoom"><img src="images/project-saas.jpg" alt="Plataforma SaaS" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
+                    <div class="relative img-zoom"><img src="ukkorucode/images/project-saas.jpg" alt="Plataforma SaaS" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 group-hover:text-brand-cyan transition-colors">Plataforma SaaS de Gestión Empresarial</h3>
                         <p class="text-white/60 text-sm mb-4 line-clamp-2">Sistema completo de gestión empresarial con módulos de proyectos, equipos y análisis en tiempo real.</p>
@@ -393,7 +393,7 @@
                     </div>
                 </div>
                 <div class="reveal glass rounded-2xl overflow-hidden card-hover group" style="animation-delay: 0.1s;">
-                    <div class="relative img-zoom"><img src="images/project-fintech.jpg" alt="App Fintech" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
+                    <div class="relative img-zoom"><img src="ukkorucode/images/project-fintech.jpg" alt="App Fintech" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 group-hover:text-brand-purple transition-colors">App Móvil Fintech</h3>
                         <p class="text-white/60 text-sm mb-4 line-clamp-2">Aplicación bancaria digital con billetera virtual, criptomonedas y pagos biométricos.</p>
@@ -402,7 +402,7 @@
                     </div>
                 </div>
                 <div class="reveal glass rounded-2xl overflow-hidden card-hover group" style="animation-delay: 0.2s;">
-                    <div class="relative img-zoom"><img src="images/project-erp.jpg" alt="Sistema ERP" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
+                    <div class="relative img-zoom"><img src="ukkorucode/images/project-erp.jpg" alt="Sistema ERP" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 group-hover:text-brand-blue transition-colors">Sistema ERP para PYMES</h3>
                         <p class="text-white/60 text-sm mb-4 line-clamp-2">Sistema integral de planificación de recursos empresariales para pequeñas y medianas empresas.</p>
@@ -411,7 +411,7 @@
                     </div>
                 </div>
                 <div class="reveal glass rounded-2xl overflow-hidden card-hover group" style="animation-delay: 0.3s;">
-                    <div class="relative img-zoom"><img src="images/project-elearning.jpg" alt="Plataforma E-learning" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
+                    <div class="relative img-zoom"><img src="ukkorucode/images/project-elearning.jpg" alt="Plataforma E-learning" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 group-hover:text-brand-cyan transition-colors">Plataforma E-learning Corporativa</h3>
                         <p class="text-white/60 text-sm mb-4 line-clamp-2">Plataforma de aprendizaje en línea con cursos interactivos, evaluaciones y certificaciones.</p>
@@ -420,7 +420,7 @@
                     </div>
                 </div>
                 <div class="reveal glass rounded-2xl overflow-hidden card-hover group" style="animation-delay: 0.4s;">
-                    <div class="relative img-zoom"><img src="images/project-ai-dashboard.jpg" alt="Dashboard AI" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
+                    <div class="relative img-zoom"><img src="ukkorucode/images/project-ai-dashboard.jpg" alt="Dashboard AI" class="w-full h-48 object-cover"><div class="absolute inset-0 bg-gradient-to-t from-brand-dark via-transparent to-transparent"></div></div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 group-hover:text-brand-purple transition-colors">Dashboard Analítico con IA</h3>
                         <p class="text-white/60 text-sm mb-4 line-clamp-2">Panel de control inteligente con análisis predictivo, visualización de datos y alertas automáticas.</p>
@@ -442,7 +442,7 @@
         <div class="absolute inset-0 bg-black/80 backdrop-blur-sm" onclick="closeModal('modal1')"></div>
         <div class="modal-content relative glass-strong rounded-3xl max-w-3xl w-full max-h-[90vh] overflow-y-auto">
             <button onclick="closeModal('modal1')" class="absolute top-4 right-4 w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-white/20 transition-colors z-10"><i data-lucide="x" class="w-5 h-5"></i></button>
-            <div class="img-zoom"><img src="images/project-saas.jpg" alt="Plataforma SaaS" class="w-full h-64 object-cover"></div>
+            <div class="img-zoom"><img src="ukkorucode/images/project-saas.jpg" alt="Plataforma SaaS" class="w-full h-64 object-cover"></div>
             <div class="p-8">
                 <h3 class="text-2xl font-bold mb-4 gradient-text">Plataforma SaaS de Gestión Empresarial</h3>
                 <p class="text-white/70 mb-6 leading-relaxed">Desarrollamos una plataforma completa de gestión empresarial que permite a las empresas administrar proyectos, equipos, tareas y recursos desde un solo lugar. La plataforma incluye dashboards en tiempo real, reportes automatizados, integración con herramientas populares y un sistema de permisos avanzado.</p>
@@ -455,7 +455,7 @@
         <div class="absolute inset-0 bg-black/80 backdrop-blur-sm" onclick="closeModal('modal2')"></div>
         <div class="modal-content relative glass-strong rounded-3xl max-w-3xl w-full max-h-[90vh] overflow-y-auto">
             <button onclick="closeModal('modal2')" class="absolute top-4 right-4 w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-white/20 transition-colors z-10"><i data-lucide="x" class="w-5 h-5"></i></button>
-            <div class="img-zoom"><img src="images/project-fintech.jpg" alt="App Fintech" class="w-full h-64 object-cover"></div>
+            <div class="img-zoom"><img src="ukkorucode/images/project-fintech.jpg" alt="App Fintech" class="w-full h-64 object-cover"></div>
             <div class="p-8">
                 <h3 class="text-2xl font-bold mb-4 gradient-text">App Móvil Fintech</h3>
                 <p class="text-white/70 mb-6 leading-relaxed">Aplicación bancaria digital completa que permite a los usuarios gestionar sus finanzas, realizar transferencias, comprar criptomonedas y realizar pagos con tecnología biométrica. La app cuenta con seguridad de nivel bancario y cumple con todas las regulaciones financieras.</p>
@@ -468,7 +468,7 @@
         <div class="absolute inset-0 bg-black/80 backdrop-blur-sm" onclick="closeModal('modal3')"></div>
         <div class="modal-content relative glass-strong rounded-3xl max-w-3xl w-full max-h-[90vh] overflow-y-auto">
             <button onclick="closeModal('modal3')" class="absolute top-4 right-4 w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-white/20 transition-colors z-10"><i data-lucide="x" class="w-5 h-5"></i></button>
-            <div class="img-zoom"><img src="images/project-erp.jpg" alt="Sistema ERP" class="w-full h-64 object-cover"></div>
+            <div class="img-zoom"><img src="ukkorucode/images/project-erp.jpg" alt="Sistema ERP" class="w-full h-64 object-cover"></div>
             <div class="p-8">
                 <h3 class="text-2xl font-bold mb-4 gradient-text">Sistema ERP para PYMES</h3>
                 <p class="text-white/70 mb-6 leading-relaxed">Sistema integral de planificación de recursos empresariales diseñado específicamente para pequeñas y medianas empresas. Integra todos los procesos de negocio en una sola plataforma, desde inventario hasta contabilidad y recursos humanos.</p>
@@ -481,7 +481,7 @@
         <div class="absolute inset-0 bg-black/80 backdrop-blur-sm" onclick="closeModal('modal4')"></div>
         <div class="modal-content relative glass-strong rounded-3xl max-w-3xl w-full max-h-[90vh] overflow-y-auto">
             <button onclick="closeModal('modal4')" class="absolute top-4 right-4 w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-white/20 transition-colors z-10"><i data-lucide="x" class="w-5 h-5"></i></button>
-            <div class="img-zoom"><img src="images/project-elearning.jpg" alt="Plataforma E-learning" class="w-full h-64 object-cover"></div>
+            <div class="img-zoom"><img src="ukkorucode/images/project-elearning.jpg" alt="Plataforma E-learning" class="w-full h-64 object-cover"></div>
             <div class="p-8">
                 <h3 class="text-2xl font-bold mb-4 gradient-text">Plataforma E-learning Corporativa</h3>
                 <p class="text-white/70 mb-6 leading-relaxed">Plataforma de aprendizaje en línea diseñada para empresas que desean capacitar a su personal de manera eficiente. Incluye cursos interactivos, evaluaciones, seguimiento de progreso y sistema de certificación automática.</p>
@@ -494,7 +494,7 @@
         <div class="absolute inset-0 bg-black/80 backdrop-blur-sm" onclick="closeModal('modal5')"></div>
         <div class="modal-content relative glass-strong rounded-3xl max-w-3xl w-full max-h-[90vh] overflow-y-auto">
             <button onclick="closeModal('modal5')" class="absolute top-4 right-4 w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-white/20 transition-colors z-10"><i data-lucide="x" class="w-5 h-5"></i></button>
-            <div class="img-zoom"><img src="images/project-ai-dashboard.jpg" alt="Dashboard AI" class="w-full h-64 object-cover"></div>
+            <div class="img-zoom"><img src="ukkorucode/images/project-ai-dashboard.jpg" alt="Dashboard AI" class="w-full h-64 object-cover"></div>
             <div class="p-8">
                 <h3 class="text-2xl font-bold mb-4 gradient-text">Dashboard Analítico con IA</h3>
                 <p class="text-white/70 mb-6 leading-relaxed">Panel de control inteligente que utiliza machine learning para analizar datos empresariales, predecir tendencias y generar insights accionables. Incluye visualizaciones interactivas y alertas automáticas basadas en anomalías detectadas.</p>
@@ -563,21 +563,21 @@
                     <div id="testimonials-track" class="flex transition-transform duration-500">
                         <div class="testimonial-slide w-full md:w-1/2 lg:w-1/3 flex-shrink-0 px-4">
                             <div class="glass rounded-2xl p-6 lg:p-8 h-full">
-                                <div class="flex items-center gap-4 mb-6"><img src="images/testimonial-1.jpg" alt="Cliente" class="w-14 h-14 rounded-full object-cover"><div><h4 class="font-bold">María González</h4><p class="text-white/60 text-sm">CEO, TechStart Colombia</p></div></div>
+                                <div class="flex items-center gap-4 mb-6"><img src="ukkorucode/images/testimonial-1.jpg" alt="Cliente" class="w-14 h-14 rounded-full object-cover"><div><h4 class="font-bold">María González</h4><p class="text-white/60 text-sm">CEO, TechStart Colombia</p></div></div>
                                 <div class="flex gap-1 mb-4"><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i></div>
                                 <p class="text-white/70">"UkkoruCode transformó completamente nuestra operación. El equipo fue profesional, cumplieron con los plazos y el resultado superó nuestras expectativas. Altamente recomendados."</p>
                             </div>
                         </div>
                         <div class="testimonial-slide w-full md:w-1/2 lg:w-1/3 flex-shrink-0 px-4">
                             <div class="glass rounded-2xl p-6 lg:p-8 h-full">
-                                <div class="flex items-center gap-4 mb-6"><img src="images/testimonial-2.jpg" alt="Cliente" class="w-14 h-14 rounded-full object-cover"><div><h4 class="font-bold">Carlos Rodríguez</h4><p class="text-white/60 text-sm">Director de TI, FinCorp</p></div></div>
+                                <div class="flex items-center gap-4 mb-6"><img src="ukkorucode/images/testimonial-2.jpg" alt="Cliente" class="w-14 h-14 rounded-full object-cover"><div><h4 class="font-bold">Carlos Rodríguez</h4><p class="text-white/60 text-sm">Director de TI, FinCorp</p></div></div>
                                 <div class="flex gap-1 mb-4"><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i></div>
                                 <p class="text-white/70">"La plataforma fintech que desarrollaron para nosotros es excepcional. La seguridad, la velocidad y la experiencia de usuario son de clase mundial. Un socio tecnológico invaluable."</p>
                             </div>
                         </div>
                         <div class="testimonial-slide w-full md:w-1/2 lg:w-1/3 flex-shrink-0 px-4">
                             <div class="glass rounded-2xl p-6 lg:p-8 h-full">
-                                <div class="flex items-center gap-4 mb-6"><img src="images/testimonial-3.jpg" alt="Cliente" class="w-14 h-14 rounded-full object-cover"><div><h4 class="font-bold">Ana Martínez</h4><p class="text-white/60 text-sm">Fundadora, EduTech</p></div></div>
+                                <div class="flex items-center gap-4 mb-6"><img src="ukkorucode/images/testimonial-3.jpg" alt="Cliente" class="w-14 h-14 rounded-full object-cover"><div><h4 class="font-bold">Ana Martínez</h4><p class="text-white/60 text-sm">Fundadora, EduTech</p></div></div>
                                 <div class="flex gap-1 mb-4"><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i><i data-lucide="star" class="w-5 h-5 text-yellow-400 fill-yellow-400"></i></div>
                                 <p class="text-white/70">"El equipo de UkkoruCode entendió perfectamente nuestra visión educativa. La plataforma e-learning que crearon ha revolucionado la forma en que capacitamos a nuestros estudiantes."</p>
                             </div>
@@ -670,7 +670,7 @@
                 <div class="col-span-2 md:col-span-4 lg:col-span-2">
                     <a href="#home" class="flex items-center gap-2 mb-6">
                         <div class="w-10 h-10 rounded-lg bg-gradient-to-br flex items-center justify-center">
-                        <img src="./images/Circular Logo.png" alt="Logo" class="w-10 h-10 object-contain">
+                        <img src="ukkorucode/images/Circular Logo.png" alt="Logo" class="w-10 h-10 object-contain">
                         </div>
                         <span class="text-xl font-bold">Ukkoru<span class="gradient-text">Code</span></span>
                     </a>
