--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                 <div class="col-span-2 md:col-span-4 lg:col-span-2">
                     <a href="#home" class="flex items-center gap-2 mb-6">
                         <div class="w-10 h-10 rounded-lg bg-gradient-to-br flex items-center justify-center">
-                        <img src="ukkorucode/images/Circular Logo.png" alt="Logo" class="w-10 h-10 object-contain">
+                        <img src="./ukkorucode/images/Circular Logo.png" alt="Logo" class="w-10 h-10 object-contain">
                         </div>
                         <span class="text-xl font-bold">Ukkoru<span class="gradient-text">Code</span></span>
                     </a>
