--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                         <div class="space-y-4">
                             <a href="mailto:contacto@ukkorucode.com" class="flex items-center gap-4 glass rounded-xl p-4 hover:bg-white/10 transition-colors group">
                                 <div class="w-12 h-12 rounded-xl bg-gradient-to-br from-brand-cyan/20 to-brand-blue/20 flex items-center justify-center group-hover:scale-110 transition-transform"><i data-lucide="mail" class="w-5 h-5 text-brand-cyan"></i></div>
-                                <div><div class="text-white/50 text-sm">Correo</div><div class="text-white font-medium">contacto@ukkorucode.com</div></div>
+                                <div><div class="text-white/50 text-sm">Correo</div><div class="text-white font-medium">servicioalcliente@ukkorucode.github.io</div></div>
                             </a>
                             <a href="tel:+5712345678" class="flex items-center gap-4 glass rounded-xl p-4 hover:bg-white/10 transition-colors group">
                                 <div class="w-12 h-12 rounded-xl bg-gradient-to-br from-brand-purple/20 to-brand-cyan/20 flex items-center justify-center group-hover:scale-110 transition-transform"><i data-lucide="phone" class="w-5 h-5 text-brand-purple"></i></div>
