--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         .reveal { opacity: 0; transform: translateY(30px); }
         ::selection { background: rgba(0, 102, 255, 0.4); color: white; }
     </style>
-    <link rel="icon" type="image/x-icon" href="./ukkorucode/images//favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="../ukkorucode/images//favicon-32x32.png">
 </head>
 <body>
     <nav id="navbar" class="fixed top-0 left-0 right-0 z-50 transition-all duration-500 nav-hidden">
